--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #DataBase Properties
-spring.datasource.url=jdbc:mysql://3.110.55.234:3306/myshop?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://ec2-3-109-58-145.ap-south-1.compute.amazonaws.com:3306/myshop?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=update
